# Chip_8_emulator

./: .gitmodules  CMakeLists.txt  Makefile  README.md
src/: SDL3_platform.cpp  SDL3_platform.hpp  chip_8.cpp  chip_8.hpp  main.cpp
